# BPI-R2PRO-BSP

./: Makefile  README.md  build.sh  envsetup.sh  mkfirmware.sh  rkflash.sh
app/CameraFactoryTestServer/: CMakeLists.txt  CameraFactoryTestServer.cpp
app/aiserver/: CMakeLists.txt
app/aiserver/cmake/: FindEasyMedia.cmake  FindExiv2.cmake  FindFreeType2.cmake
app/aiserver/cmake/toolchains/: linux-arm.cmake
app/aiserver/src/: CMakeLists.txt  ai_feature_retriver.cpp  ai_feature_retriver.h  ai_scene_director.cpp  ai_scene_director.h  ai_uvc_graph.cpp  ai_uvc_graph.h  aiserver.cpp  aiserver.h
app/aiserver/src/dbus/: dbus_dispatcher.cpp  dbus_dispatcher.h  dbus_server.cpp  dbus_server.h  rockchip.aiserver.control.conf
app/aiserver/src/task/: ai_task_factory.cpp  ai_task_factory.h  ai_task_handler.h  ai_task_manager.cpp  ai_task_manager.h
app/dbserver/: CMakeLists.txt  common.c  common.h  dbus_helpers.c  event.c  event.h  log.h  main.c  media.c  media.h  network.c  network.h  peripherals.c  peripherals.h  storage.c  storage.h  system.c  system.h
app/dbserver/dbtool/: dbtool
app/dbserver/dbusconfig/: dbserver.conf
app/eptz_demo/: CMakeLists.txt
app/eptz_demo/include/: clipflow.h  globle.h  npu_pp_output.h  npu_uvc_shared.h  rknn_ssd.h  rockx_draw.h  term_help.h
app/eptz_demo/src/: clipflow.cc  eptz_demo.cc  globle.cc  npu_pp_output.cc  rknn_ssd.cc  rockx_draw.cc  term_help.cc
app/ipc-daemon/: CMakeLists.txt  S99ipc-daemon.sh  common.c  common.h  daemon_service.c  daemon_service.h  db_manager.c  db_manager.h  main.cpp  system_manager.c  system_manager.h
app/ipc-daemon/cmake/: Findminilogger.cmake
app/ipc-daemon/cmake/toolchains/: linux-arm.cmake
app/ipc-daemon/dbusconfig/: system.conf
app/ipc-daemon/doc/zh_cn/: ipc-daemon.md
app/ipcweb-backend/: CMakeLists.txt
app/ipcweb-backend/src/: CMakeLists.txt  audio_api.cpp  common.cpp  common.h  event_api.cpp  image_api.cpp  image_api.h  network_api.cpp  osd_api.cpp  peripherals_api.cpp  peripherals_api.h  rest_api.cpp  rest_api.h  roi_api.cpp  storage_api.cpp  stream_api.cpp  system_api.cpp  video_api.cpp
app/ipcweb-backend/www/: 3rdpartylicenses.txt  index.html  main-es2015.3520ae986549754f034f.js  main-es5.3520ae986549754f034f.js  polyfills-es5.b0ed0eb7d025d8dc4f1a.js  scripts.ff3a583f0468bbe90d00.js  styles.0a29a7bbba5a1e7607a3.css
app/libIPCProtocol/: CMakeLists.txt  IPCProtocol.cc  IPCProtocol.h  dbserver.cc  dbserver.h  dbserver_proxy.h  dbus_connection.cc  dbus_connection.h  dbus_signal.cc  dbus_signal.h  ispserver.cc  ispserver.h  ispserver_proxy.h  libipcpro_log_control.cc  libipcpro_log_control.h  mediaserver.cc  mediaserver.h  mediaserver_proxy.h  netserver.cc  netserver.h  netserver_proxy.h  storage_manager.cc  storage_manager.h  storage_manager_proxy.h  system_manager.cc  system_manager.h  system_manager_proxy.h
app/libIPCProtocol/demo/: Makefile  dbinit.xml  dbserver_initdata.c  dbserver_test.c  dbserver_test.h  mediaserver_test.c  mediaserver_test.h  netserver_test.c  netserver_test.h  storage_manager_test.c  storage_manager_test.h  system_manager_test.c
app/libgdbus/: CMakeLists.txt  watch.c
app/librkdb/: CMakeLists.txt  rkdb.c  rkdb.h
app/librkdb/cmake/: FindCJSON.cmake  FindDbusC++.cmake  FindGlib.cmake  cppcheck.cmake
app/librkdb/cmake/toolchains/: linux-arm.cmake
app/librkdb/demo/: Makefile  main.c
app/mediaserver/: .gitignore  CMakeLists.txt
app/mediaserver/cmake/: FindDbus.cmake  FindGLIB2.cmake  json-format.cmake
app/mediaserver/src/: CMakeLists.txt  mediaserver.cpp  mediaserver.h
app/mediaserver/src/conf/: nlohmann_json_style
app/mediaserver/src/dbus/: dbus_dispatcher.cpp  dbus_dispatcher.h  dbus_server.cpp  dbus_server.h  rockchip.mediaserver.control.conf
app/mediaserver/src/export/: CMakeLists.txt  libmediaserver_api.cpp  libmediaserver_api.h
app/mediaserver/src/flows/: flow_common.h  flow_control.cpp  flow_control.h  flow_db_protocol.cpp  flow_db_protocol.h  flow_export.cpp  flow_export.h  flow_manager.cpp  flow_manager.h  flow_nn_handler.cpp  flow_nn_handler.h  flow_parser.cpp  flow_parser.h  flow_pipe.cpp  flow_pipe.h  flow_sm_protocol.cpp  flow_sm_protocol.h  flow_unit.cpp  flow_unit.h
app/mediaserver/src/link/: link_common.h  link_interface.h  link_manager.cpp  (+1 more)
app/rkaiq_tool_server/: .clang-format  .clang-tidy  .gitignore  Android.bp  CMakeLists.txt  rkaiq_tool_server.cpp
app/rkaiq_tool_server/camera/: camera_capture.cpp  camera_capture.h  camera_device.cpp  camera_device.h  camera_infohw.cpp  camera_infohw.h  camera_memory.cpp  camera_memory.h
app/rkaiq_tool_server/common/: cmdline.h
app/rkaiq_tool_server/logger/: log.cpp  log.h
app/rkaiq_tool_server/mediactl/: libmediactl.c  libv4l2subdev.c  media-bus-format-codes.h  media-bus-format-names.h  media_info.c  media_info.h  mediactl-priv.h  mediactl.h  options.c  options.h  tools.h  v4l2subdev.h
app/rkaiq_tool_server/netserver/: domain_tcp_client.cpp  domain_tcp_client.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
app/rkaiq_tool_server/rkaiq/: multiframe_process.cpp  multiframe_process.h  rkaiq_common.h  rkaiq_online_protocol.cpp  rkaiq_online_protocol.h  rkaiq_protocol.cpp  rkaiq_protocol.h  rkaiq_raw_protocol.cpp  rkaiq_raw_protocol.h
app/rkaiq_tool_server/rkmedia/: link_flow.cc  rtsp_server.cpp  rtsp_server.h  sink_flow.cc  source_flow.cc
app/rkaiq_tool_server/rtspserver/: Android.bp  CamCaptureHelper.cpp  CamCaptureHelper.h  H264LiveVideoServerMediaSubsession.cpp  H264LiveVideoServerMediaSubsession.h  H264LiveVideoSource.cpp  H264LiveVideoSource.h  QMediaBuffer.cpp  QMediaBuffer.h  RKHWEncApi.cpp  RKHWEncApi.h  RtspServer.cpp  RtspServer.h
app/rkaiq_tool_server/scripts/: clang-format-diff.py  format_code.sh  pre-summit.sh  run-clang-tidy.py
app/rkaiq_tool_server/test/: CMakeLists.txt
app/storage_manager/: CMakeLists.txt  db_monitor.c  db_monitor.h  dbus_helpers.h  device_info.c  log.h  main.c  manage.c  manage.h  mkfs.fat.c  mkfs.h  msg_process.c  msg_process.h  uevent_monitor.c  uevent_monitor.h
app/storage_manager/dbusconfig/: storage_manager.conf
(+3754 files in other folders)
